--- a/_posts/.2022-01-18-oddfauna-game-features-handmade-characters.md
+++ b/_posts/.2022-01-18-oddfauna-game-features-handmade-characters.md
@@ -1,5 +1,5 @@
 ---
-description: This upcoming videogame features 3D-scanned characters that were made by hand
+title: This upcoming videogame features 3D-scanned characters that were made by hand
 image: https://firebasestorage.googleapis.com:443/v0/b/type-c1c71.appspot.com/o/e1ntH8E8W1ZESwxPHTxNLOa0hK32%2FYZI0qdaHsNR49QHQ.jpg?alt=media&token=30d0fab6-ded6-40c7-8eea-a077af157a3a
 ---
 
